(MOD) Refactored book submitting logic
- added basic modular logic for adding books
- added logic for appending library content to the DOM
- refactored logic for appending listeners to the buttons
- initiated initializer function

(RM) Removed obsolete code

- removed HTML status tag and condition

(FIX) Fixed wron call on some functions

- fixed bookName being mispelled in a few functions
- fixed naming convention for ease of use
- fixed missing '.' on querySelector invocation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <div class="container">
         <div class="cardContainer">
             <div class="card">
-                <div class="status">Read</div>
                 <strong>Title of the book</strong><br>
                 <p>Author: xxxxx</p>
                 <p>Year of release: xxxx/xx/xx</p>
@@ -55,13 +54,14 @@
                     <input type="text" id="author">
                 </div>
                 <div>
-                    <label for="yearRelease">Year of release:</label>
-                    <input type="text" id="yearRelease">
+                    <label for="yearOfRelease">Year of release:</label>
+                    <input type="text" id="yearOfRelease">
                 </div>
                 <div>
                     <label for="description">Description:</label>
                     <textarea name="description" id="description" cols="5" rows="8" placeholder="Insert here the description of your book!"></textarea>
                 </div>
+                <button type="button" id="submitButton">Submit</button>
             </div>
         </form>
     </dialog>
